# n-observer

./: .gitignore  README.md  run_tests.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
n-observer/: Cargo.toml  README.md
n-observer/src/: main.rs
src/py/: requirements.txt
src/py/n_observer/: __init__.py  pyproject.toml
src/py/n_observer/n_observer/: __init__.py  core.py
src/py/n_observer/n_observer/rwlock/: __init__.py
src/py/n_observer/src/n_observer/: core.py
src/py/tests/n_observer/: test_observer.py
src/rs/: Cargo.toml
src/rs/n-observer/: Cargo.toml
src/rs/n-observer-cffi/: Cargo.toml  README.md
src/rs/n-observer-cffi-impl/: Cargo.toml  README.md  build.rs  output.rs
src/rs/n-observer-cffi-impl/src/: ior_cffi_traits.rs  lib.rs  observable_cffi_traits.rs  publisher_cffi_traits.rs
src/rs/n-observer-cffi/src/: lib.rs
src/rs/n-observer/src/: lib.rs  observer.rs
