[package]
name = "n-observer"
version = "0.1.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Utility for creating global mockable objects."
repository = "https://github.com/weirdev/global-mockable"
readme = "README.md"
keywords = ["observer", "pattern", "async", "await", "pubsub"]
categories = ["rust-patterns"]

[lib]
name = "n_observer"
crate-type = ["rlib"]

[dependencies]
rs-schema-derive = "0.1.0"
futures = "0.3.31"

[dependencies.tokio]
version = "1.41.1"
features = ["macros", "rt-multi-thread", "sync"]

[dev-dependencies]
serial_test = "3.2.0"
