[package]
name = "n-observer-cffi-impl"
version = "0.1.0"
edition = "2024"

[lib]
name = "n_observer_cffi_impl"
crate-type = ["rlib"]

[dependencies]
n-observer = { version = "0.1.0", path = "../n-observer" }
async-cffi = "0.1.0"
futures = "0.3.31"

[dependencies.tokio]
version = "1.41.1"
features = ["macros", "rt-multi-thread", "sync"]

[dev-dependencies]
serial_test = "3.2.0"

[build-dependencies]
n-observer = { version = "0.1.0", path = "../n-observer" }
async-cffi-codegen = "0.1.0"
